Refactor so a message is attached to an issue. ActionCable added too.

--- a/app/views/channels/_index.html.erb
+++ b/app/views/channels/_index.html.erb
@@ -4,7 +4,7 @@
       <div class="channel-list">
         <div class="channel active"
               data-controller="channel-subscription"
-              data-channel-subscription-channel-id-value="<%= @channel.id %>"
+              data-channel-subscription-channel-id-value="<%= channel.id %>"
             >
           #general
         </div>
