--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,32 +7,30 @@
       </div>
     </div>
     <!-- Issues column -->
-    <%= render "channels/index" %>
+    <%= render partial: "channels/index", locals: {channel: @issue} %>
     <!-- Messages column -->
   </div>
   <div class="col-8">
     <div class="container">
-      <h3 class="mt-2">#<%= @channel.name.downcase %></h3>
-      <div class="message-list">
-        <div
-          data-controller="channel-subscription"
-  data-channel-subscription-channel-id-value="<%= @channel.id %>">
-          <div class="messages" data-channel-subscription-target="messages">
-            <% @channel.chatroom_messages.each do |message| %>
-              <%= render "chatroom_messages/chatroom_message", message: message %>
+      <div data-controller="issue-subscription" data-issue-subscription-issue-id-value="<%= @issue.id %>">
+        <h3 class="mt-2">#<%= @issue.title.downcase %></h3>
+        <div class="message-list">
+          <div class="messages" data-issue-subscription-target="messages">
+            <% @issue.messages.each do |message| %>
+              <%= render "messages/message", message: message %>
             <% end %>
           </div>
         </div>
-      </div>
-      <div class="message-input">
-        <%= simple_form_for [@channel, @chatroom_message], html: {class: "d-flex"} do |f| %>
-          <%= f.input :content,
-      label: false,
-      placeholder: "Message ##{@channel.name}",
-      wrapper_html: {class: "flex-grow-1"}
-    %>
-          <%= f.submit "Send", class: "btn btn-primary mb-3" %>
-        <% end %>
+        <div class="message-input">
+          <%= simple_form_for [@issue, @message], html: {class: "d-flex"} do |f| %>
+            <%= f.input :content,
+              label: false,
+              placeholder: "Message ##{@issue.title}",
+              wrapper_html: {class: "flex-grow-1"}
+            %>
+            <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
