Add partials for css components

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+  justify-content: space-evenly;
 }
 
 .navbar-lewagon .navbar-collapse {
