--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,35 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="banner">
+  <h1>Ask technical questions, get helpful answers</h1>
+  <h2>* even after the bootcamp</h2>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="card-grid">
+      <div class="card-wide">
+        <div class="header">Le Chariot</div>
+        <div class="title">Le Chariot</div>
+        <div class="content">
+          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
+          </div>
+          <div class="btn btn-primary">Button</div>
+      </div>
+      <div class="card-narrow-pink">
+        <div class="header">Le Chariot</div>
+        <div class="title">Le Chariot</div>
+        <div class="content">
+          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
+          </div>
+          <div class="btn btn-primary">Button</div>
+      </div>
+      <div class="card-narrow-yellow">
+        <div class="header">Le Chariot</div>
+        <div class="title">Le Chariot</div>
+        <div class="content">
+          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
+          </div>
+          <div class="btn btn-primary">Button</div>
+      </div>
+    </div>
+  </div>
+</div>
