--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,11 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
+@import "bubble";
+@import "card";
+@import "card_grid";
+@import "footer";
 @import "form_legend_clear";
+@import "message_controls";
 @import "navbar";
