Home page animation

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "bubble";
 @import "card";
 @import "card_grid";
+@import "falling_shapes";
 @import "footer";
 @import "form_legend_clear";
 @import "message_controls";
