--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,39 @@
 
-<div class="banner">
-  <h1>Ask technical questions, get helpful answers</h1>
-  <h2>* even after the bootcamp</h2>
+<div class="banner d-flex flex-row justify-content-space-between align-items-center">
+  <div class="container d-flex">
+      <div class="banner-content">
+        <h1>Ask technical questions, get helpful answers*</h1>
+        <h3>* even after the bootcamp</h3>
+        <div class="btn btn-primary">Get started</div>
+      </div>
+  <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
+    <div class="fs-circle"><div></div></div>
+    <div class="fs-square"></div>
+    <div class="fs-triangle">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319.45 202.04">
+        <path d="M160.48,201.93a1.76,1.76,0,0,1-1,.08c-7.41-9.08-14.66-18.19-22.27-27.83-9.81-12.35-19.25-24.17-28.69-36L96.77,123c-9.3-11.68-18.21-22.86-27.12-34-6.6-8.46-13.2-16.92-20.21-25.88L27.67,36,0,.15H8.59l20-.13,24,.11c18,0,35-.08,52-.12l18,.13,47-.12,30,.13,20-.13,24,.12,51-.14,20.84.14a30.82,30.82,0,0,1,4,1L309.24,13.75c-9.27,11.76-18.12,23-27,34.28q-39.4,49.71-78.78,99.45c-5,6.26-9.88,12.56-15.22,19.35-5.19,6.71-10,12.93-14.78,19.14-4.27,5.22-8.55,10.44-13,16"/>
+      </svg>
+    </div>
+  </div>
+  </div>
 </div>
 <div class="container">
   <div class="row">
     <div class="card-grid">
-      <div class="card-wide">
+      <div class="card-wide col-6 m-2">
+        <div class="arrow"></div>
+        <div class="body">
+          <div class="header">Le Chariot</div>
+          <div class="title">Le Chariot</div>
+          <div class="content">
+              <p>Sometimes you need some help before things fall into place.
+              Join Le Chariot today to get access to a community of helpful fellow coders.
+              Just like the old ticketing system (only better).</p>
+            </div>
+            <div class="btn btn-primary">Button</div>
+        </div>
+      </div>
+      <div class="card-narrow-pink col-3 m-2">
         <div class="header">Le Chariot</div>
         <div class="title">Le Chariot</div>
         <div class="content">
@@ -14,15 +41,7 @@
           </div>
           <div class="btn btn-primary">Button</div>
       </div>
-      <div class="card-narrow-pink">
-        <div class="header">Le Chariot</div>
-        <div class="title">Le Chariot</div>
-        <div class="content">
-          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
-          </div>
-          <div class="btn btn-primary">Button</div>
-      </div>
-      <div class="card-narrow-yellow">
+      <div class="card-narrow-yellow col-3 m-2">
         <div class="header">Le Chariot</div>
         <div class="title">Le Chariot</div>
         <div class="content">
