--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$red: #F45270;
+$blue: #4F45ED;
+$yellow: #E3ED45;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #52F4D6;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #E6E7EA;
