--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,11 @@
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$yellow: #E3ED45;
+$orange: #F75606;
+$green: #52F4D6;
+$gray: #181F25;
+$light-gray: #E6E7EA;
+$white: #ffffff;
+$pink: #F45270;
+$purple: #4F45ED;
