--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="container d-flex">
       <div class="banner-content">
         <h1>Ask technical questions, get helpful answers*</h1>
-        <h3>* even after the bootcamp</h3>
+        <p>* even after the bootcamp</p>
         <div class="btn btn-primary">Get started</div>
       </div>
   <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
@@ -20,34 +20,40 @@
 <div class="container">
   <div class="row">
     <div class="card-grid">
-      <div class="card-wide col-6 m-2">
-        <div class="arrow"></div>
-        <div class="body">
-          <div class="header">Le Chariot</div>
-          <div class="title">Le Chariot</div>
-          <div class="content">
-              <p>Sometimes you need some help before things fall into place.
-              Join Le Chariot today to get access to a community of helpful fellow coders.
-              Just like the old ticketing system (only better).</p>
-            </div>
-            <div class="btn btn-primary">Button</div>
+      <div class="wide col-4 m-2 p-4 d-flex flex-column">
+        <div class="card-nav mb-auto">
+          <div class="arrow"></div>
+          <div class="header">LATEST</div>
+        </div>
+        <div class="title">Le Chariot</div>
+        <div class="content me-5">
+            <p>Sometimes you need some help before things fall into place.
+            Join Le Chariot today to get access to a community of helpful fellow coders.
+            Just like the old ticketing system (only better).</p>
         </div>
       </div>
-      <div class="card-narrow-pink col-3 m-2">
-        <div class="header">Le Chariot</div>
-        <div class="title">Le Chariot</div>
-        <div class="content">
-          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
+      <div class="pink col-2 m-2 p-4 d-flex flex-column">
+          <div class="card-nav mb-auto">
+            <div class="arrow"></div>
+            <div class="header">MOST ACTIVE</div>
           </div>
-          <div class="btn btn-primary">Button</div>
+        <div class="title">#1122</div>
+        <div class="content me-3">
+          The most active, and argubaly best, Le Wagon Batch on Le Chariot right now.
+        </div>
       </div>
-      <div class="card-narrow-yellow col-3 m-2">
-        <div class="header">Le Chariot</div>
-        <div class="title">Le Chariot</div>
-        <div class="content">
-          Le Chariot, Le Chariot, Le Chariot, Le Chariot, Le Chariot
-          </div>
-          <div class="btn btn-primary">Button</div>
+      <div class="yellow col-2 m-2 p-4 d-flex flex-column">
+        <div class="card-nav mb-auto">
+          <div class="arrow"></div>
+          <div class="header">TOP CONTRIBUTOR</div>
+        </div>
+        <div class="user d-flex">
+          <div class="avatar">avatar</div>
+          <div class="title">Jane Doe</div>
+        </div>
+        <div class="content me-3">
+          Jane has contributed to over 150 questions and answered 74 questions this month.
+        </div>
       </div>
     </div>
   </div>
