Latest card TIDY UP

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,13 +1,16 @@
 .wide {
   background-color: #52F4D6;
+  border-radius: 1px solid #000000;
 }
 
 .yellow {
   background-color: #E3ED45;
+  border-radius: 1px solid #000000;
 }
 
 .pink {
   background-color: #F45270;
+  border-radius: 1px solid #000000;
 }
 
 .pink .header {
