--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,8 @@
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
           <div class="header">LATEST</div>
+          <div class="title">Le Chariot</div>
         </div>
-        <div class="title">Le Chariot</div>
         <div class="content me-5">
             <p>Sometimes you need some help before things fall into place.
             Join Le Chariot today to get access to a community of helpful fellow coders.
@@ -36,8 +36,8 @@
           <div class="card-nav mb-auto">
             <div class="arrow"></div>
             <div class="header">MOST ACTIVE</div>
+            <div class="title">#1122</div>
           </div>
-        <div class="title">#1122</div>
         <div class="content me-3">
           The most active, and argubaly best, Le Wagon Batch on Le Chariot right now.
         </div>
@@ -46,13 +46,12 @@
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
           <div class="header">TOP CONTRIBUTOR</div>
-        </div>
-        <div class="user d-flex">
-          <div class="avatar">avatar</div>
           <div class="title">Jane Doe</div>
         </div>
+        <div class="user d-flex">
+        </div>
         <div class="content me-3">
-          Jane has contributed to over 150 questions and answered 74 questions this month.
+          This month Jane responded to 105 questions and successfully resolved 74.
         </div>
       </div>
     </div>
