--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -104,11 +104,11 @@
 }
 
 input:checked+.slider {
-  background-color: $blue;
+  background-color: $orange;
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 1px $blue;
+  box-shadow: 0 0 1px $orange;
 }
 
 input:checked+.slider:before {
