Add bouncy cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,34 @@
 .wide {
   background-color: #52F4D6;
-  border-radius: 1px solid #000000;
+  box-shadow: 0 0 1px rgba($color: #000000, $alpha: 0.15);
+  transition: 0.2s;
+}
+
+.wide:hover {
+  box-shadow: 0 4px 2px -2px rgba($color: #000000, $alpha: 0.15);
+  transform: translate(0, -10px);
 }
 
 .yellow {
   background-color: #E3ED45;
-  border-radius: 1px solid #000000;
+  box-shadow: 0 0 1px rgba($color: #000000, $alpha: 0.15);
+  transition: 0.2s;
+}
+
+.yellow:hover {
+  box-shadow: 0 4px 2px -2px rgba($color: #000000, $alpha: 0.15);
+  transform: translate(0, -10px);
 }
 
 .pink {
   background-color: #F45270;
-  border-radius: 1px solid #000000;
+  box-shadow: 0 0 1px rgba($color: #000000, $alpha: 0.15);
+  transition: 0.2s;
+}
+
+.pink:hover {
+  box-shadow: 0 4px 2px -2px rgba($color: #000000, $alpha: 0.15);
+  transform: translate(0, -10px);
 }
 
 .pink .header {
