--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-
 <div class="banner d-flex flex-row justify-content-space-between align-items-center">
-  <div class="container d-flex">
+  <div class="container d-flex pt-4">
       <div class="banner-content">
         <h1>Ask technical questions, get helpful answers*</h1>
         <p>* even after the bootcamp</p>
@@ -17,26 +16,26 @@
   </div>
   </div>
 </div>
-<div class="container">
+<div class="container pt-4">
   <div class="row">
-    <div class="card-grid">
+    <div class="card-grid d-flex justify-content-end">
       <div class="wide col-4 m-2 p-4 d-flex flex-column">
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
           <div class="header">LATEST</div>
-          <div class="title">Le Chariot</div>
+          <h2 class="title">Le Chariot</h2>
         </div>
         <div class="content me-5">
             <p>Sometimes you need some help before things fall into place.
             Join Le Chariot today to get access to a community of helpful fellow coders.
-            Just like the old ticketing system (only better).</p>
+            Just like the old Kitt ticketing system (only better).</p>
         </div>
       </div>
       <div class="pink col-2 m-2 p-4 d-flex flex-column">
           <div class="card-nav mb-auto">
             <div class="arrow"></div>
             <div class="header">MOST ACTIVE</div>
-            <div class="title">#1122</div>
+            <h2>#1122</h2>
           </div>
         <div class="content me-3">
           The most active, and argubaly best, Le Wagon Batch on Le Chariot right now.
@@ -46,7 +45,7 @@
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
           <div class="header">TOP CONTRIBUTOR</div>
-          <div class="title">Jane Doe</div>
+          <h2 class="title">Jane Doe</h2>
         </div>
         <div class="user d-flex">
         </div>
