Add new callout + update cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
       <div class="banner-content">
         <h1>Ask technical questions, get helpful answers*</h1>
         <p>* even after the bootcamp</p>
-        <div class="btn btn-primary">Get started</div>
+        <div class="btn btn-primary mt-4">Get started</div>
       </div>
   <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
     <div class="fs-circle"><div></div></div>
@@ -22,23 +22,23 @@
       <div class="wide col-4 m-2 p-4 d-flex flex-column">
         <div class="card-nav mb-auto">
           <div class="arrow"></div>
-          <div class="header">LATEST</div>
-          <h2 class="title">Le Chariot</h2>
+          <div class="header">POPULAR QUESTION</div>
+          <h2 class="title">Stimulus</h2>
         </div>
         <div class="content me-5">
-            <p>Sometimes you need some help before things fall into place.
-            Join Le Chariot today to get access to a community of helpful fellow coders.
-            Just like the old Kitt ticketing system (only better).</p>
+            <p>I can't seem to link my stimulus controllers to a simple form.
+            The controller works for normal elements (buttons etc), but not simple forms.
+            Help me Obi Wan, you're my only hope...</p>
         </div>
       </div>
       <div class="pink col-2 m-2 p-4 d-flex flex-column">
           <div class="card-nav mb-auto">
             <div class="arrow"></div>
             <div class="header">MOST ACTIVE</div>
-            <h2>#1122</h2>
+            <h2 class="title">#1122</h2>
           </div>
         <div class="content me-3">
-          The most active, and argubaly best, Le Wagon Batch on Le Chariot right now.
+          The most active, and therefore best, Le Wagon Batch on Le Chariot right now.
         </div>
       </div>
       <div class="yellow col-2 m-2 p-4 d-flex flex-column">
@@ -53,6 +53,13 @@
           This month Jane responded to 105 questions and successfully resolved 74.
         </div>
       </div>
+    </div>
+  </div>
+  <div class="callout m-5 p-5 center d-flex justify-content-center">
+    <div class="justify-content-center col-9 text-center">
+        <h2>Sometimes you need a bit of help before everything falls into place.
+        Join Le Chariot today to get access to a community of helpful fellow coders, ready and willing to help you out.</h2>
+    <div class="btn btn-primary col-3 mt-4">Join today</div>
     </div>
   </div>
 </div>
