Using partials on the chat page to make it dynamic

--- a/app/assets/stylesheets/components/_channel_column.scss
+++ b/app/assets/stylesheets/components/_channel_column.scss
@@ -1,8 +1,8 @@
 .channel-list {
-  overflow-y: scroll;
-  padding: 10px;
-  background-color: #f9f9f9;
-  border-right: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .dark-mode {
@@ -12,37 +12,26 @@
   }
 }
 
-.channel-header {
-  display: flex;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px;
-  background-color: #fff;
-  border-bottom: 1px solid #ddd;
-  margin-bottom: 10px;
+.channel-img {
+  width: 70%;
+  border-radius: 4px;
+  padding: 16px;
+  margin: 8px;
 }
 
-.channel-header img {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  margin-right: 10px;
+.dark-mode {
+  .channel-img {
+    background-color: #3c4043;
+    border-right: solid 1px #5f6368;
+    border: 1px solid #ddd;
+  }
 }
 
-.channel {
-  display: block;
-  padding: 5px;
-  border-bottom: 1px solid #ddd;
+.channel-img.active {
+  border: 1px solid $orange;
 }
 
-.channel.active {
-  background-color: #fff;
-  font-weight: bold;
-  color: #333;
-}
-
-.channel:hover {
-  background-color: #f5f5f5;
+.channel-img:hover {
+  transform: translate(0, -2px);
   cursor: pointer;
 }
