--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,11 +4,12 @@
 @import "banner";
 @import "bubble";
 @import "card";
+@import "channel_column";
 @import "falling_shapes";
 @import "footer";
 @import "form_legend_clear";
+@import "issue_list";
 @import "message_controls";
 @import "navbar";
-@import "channel_column";
 @import "language_column";
 @import "message_column";
