added multi stage form

--- a/app/views/pages/chatgpt.html.erb
+++ b/app/views/pages/chatgpt.html.erb
@@ -1,6 +1,6 @@
 <%# AI Stuff %>
 <div class="container mt-5">
-  <h1>Pages#home</h1>
+  <h1>ChadGPT</h1>
   <p></p>
   <%= render partial: "ai/request_form", locals: { uuid: @uuid } %>
   <%= turbo_stream_from "channel_#{@uuid}" %>
@@ -9,6 +9,6 @@
   </div>
   <%# <div id="ai_output_image">
     <%= render partial: "ai/output_image", locals: { generated_image: "" } %>
-  </div>
+</div>
 </div>
 <%# AI Stuff %>
