--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -1,10 +1,9 @@
 <div class="issue-list">
-  <% @channels.each do |channel| %>
+  <% @issues.each do |issue| %>
     <div class="issue"
           data-controller="issue-subscription"
-          data-channel-subscription-channel-id-value="<%= channel.id %>"
-          data-issues-messages-target="link">
-      <%= link_to channel.name, channel_path(channel.id), data: {action: "issues-messages#render"} %>
+          data-channel-subscription-channel-id-value="<%= issue.id %>">
+      <%= link_to issue.title, channel_issue_path(issue.channel, issue), data: {action: "click->issues-messages#render", issues_messages_target: "issueLink"} %>
       <%# Stimulus action here %>
     </div>
   <% end %>
