--- a/app/views/pages/chat.html.erb
+++ b/app/views/pages/chat.html.erb
@@ -1,5 +1,4 @@
 <!-- Languages column -->
-<<<<<<< HEAD
 <div class="row"
   data-controller="issues-messages"
   >
@@ -20,6 +19,6 @@
   <!-- Issue messages column -->
   <div class="col-8"
         data-issues-messages-target="messages">
-    <%= render "issues/index" %>
+    <%= render "issues/show" %>
   </div>
 </div>
