Join today btn goes to signup

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,9 @@
     <div class="justify-content-center col-9 text-center">
         <h2>Sometimes you need a bit of help before everything falls into place.
         Join Le Chariot today to get access to a community of helpful fellow coders, ready and willing to help you out.</h2>
-    <div class="btn btn-primary col-3 mt-4">Join today</div>
+    <div class="btn btn-primary col-3 mt-4">
+      <%= link_to 'Join today', new_user_registration_path, :class => "btn" %>
+    </div>
     </div>
   </div>
 </div>
