--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -61,6 +61,14 @@
   }
 }
 
+.fa-moon {
+  margin-right: 12px;
+}
+
+.fa-sun {
+  margin-left: 12px;
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
