--- a/app/assets/stylesheets/components/_channel_column.scss
+++ b/app/assets/stylesheets/components/_channel_column.scss
@@ -1,10 +1,3 @@
-.channel-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
 .dark-mode {
   .channel-list {
     background-color: #3c4043;
@@ -13,10 +6,9 @@
 }
 
 .channel-img {
-  width: 70%;
-  border-radius: 4px;
-  padding: 16px;
-  margin: 8px;
+  min-width: 30px;
+  max-width: 50px;
+  margin: 4px;
 }
 
 .dark-mode {
@@ -32,6 +24,6 @@
 }
 
 .channel-img:hover {
-  transform: translate(0, -2px);
+  transform: translate(0, -1px);
   cursor: pointer;
 }
