--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -9,7 +9,8 @@
   <!-- Issues list column -->
   <div class="col-3 bg-light issue-column">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row mt-2">
+        <h3>Open questions</h3>
         <%= render "issues/index" %>
         <!-- The active issue class will be assigned based on click - stimulus controller required, attach controller to list -->
       </div>
