--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -3,7 +3,7 @@
   data-controller="issues-messages">
   <div class="col-1 bg-dark p-3 border-right border-black d-flex justify-content-center">
     <div class="d-flex justify-content-center">
-      <%= render "channels/index" %>
+      <%= render "channels/index", channels: @channels %>
     </div>
   </div>
   <!-- Issues list column -->
