--- a/app/views/pages/chat.html.erb
+++ b/app/views/pages/chat.html.erb
@@ -4,7 +4,7 @@
   >
   <div class="col-1 bg-dark p-3 border-right border-black">
     <div class="d-flex justify-content-center">
-       <%= render "channels/index" %>
+       <%= render "channels/index", channels: @channels %>
     </div>
   </div>
   <!-- Issues list column -->
