--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,7 +1,7 @@
 <!-- Languages column -->
 <div class="row"
   data-controller="issues-messages">
-  <div class="col-1 bg-dark p-3 border-right border-black d-flex justify-content-center">
+  <div class="col-1 bg-dark p-3 border-right border-black d-flex justify-content-center lang-column">
     <div class="d-flex justify-content-center">
       <%= render "channels/index" %>
     </div>
