--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-1 bg-dark p-3 border-right border-black">
       <div class="d-flex justify-content-center">
-        <img src="<%= image_path('js_logo.png') %>" alt="logo" class="rounded border border-white" width="50px" height="50px">
+        <img src="<%= image_path('js.png') %>" alt="logo" class="rounded border border-white" width="50px" height="50px">
       </div>
     </div>
     <!-- Issues column -->
